﻿v9.4
-----
: Updated the visual style of app page elements to more closely match Valve's new style
: Fixed a bug that caused some market items not to display features correctly in user's inventories
: Fixed a bug that caused market sorting options to disappear when paginating
: Updated wishlist emptying feature to work with larger wishlists and be more robust in general
: Fixed a timing issue when leaving multiple groups at once
: Fixed a bug that caused downloadable content details not to display properly on store pages
- Removed Empty Cart feature as this feature is now part of Steam and is therefore redundant
- Removed functions related to Steam Greenlight


v9.3
-----
+ Added the ability to sort wishlists by review scores, which will display the highest rated items first
+ Added some behind the scenes updates to OpenCritic reviews, should now display correctly on all pages
+ Added DRM warnings, price history information, and SteamDB links to bundle pages
: Updated SteamRep section on profile pages to use updated API and safer code
: Updated market code so that an items lowest price is shown on subsequent pages
: Updated stores used in price comparisons (removed 6 legacy stores, added 4 new stores)
: Fixed a bug where Steam Card Exchange links would not display properly on store pages
: Fixed a bug where the Ukraine region had an incorrect ISO code
: Fixed a bug where SteamDB links were not correctly formed on some pages
- Removed market section totals as they conflicted with new market page updates

v9.2
-----
+ Added Steam review rating scores to users wishlists
+ Added OpenCritic.com reviews to store pages
+ Added a button to toggle live market updates for popular items on or off
+ Added a confirmation dialog when emptying your shopping cart
+ Add to Cart buttons will now display on larger wishlists
+ Added a "View badge progress" button to booster packs in inventory and on trading cards in market