@@ -2,7 +2,7 @@
  * Users profiles
  * add_community_profile_links()
  **************************************/
-.es_sites_icons:not(.es_none):after {
+.es_sites_icons:not(.es_none):after, .es_sites_custom_icon {
 	content: "";
 	display: inline-block;
 	width: 16px;
