@@ -206,6 +206,7 @@
     "search_market": "Search Steam Community Market",
     "drm_third_party_sub": "Warning: One or more titles in this package use 3rd-party DRM",
     "customize": "Customize",
+    "custom": "Custom",
     "bundle_saving_text": "Here's what you save by buying this bundle",
     "thewordoptions": "Options",
     "concepts": "Concepts",
@@ -310,6 +311,8 @@
         "profile_links": "Show profile links to",
         "library_header": "Library (BETA)",
         "tag": "Tag",
+        "icon": "Icon",
+        "name": "Name",
         "show_alternative_linux_icon": "Show alternative Linux icon",
         "showcomparelinks": "Show \"Compare\" links for achievements on friend activity feed",
         "hidetmsymbols": "Trademark and Copyright symbols in game titles",
