@@ -421,6 +421,9 @@
 					<li>
 						<input type="checkbox" id="profile_astatsnl" data-setting="profile_astatsnl"><label for="profile_astatsnl"><i class="es_sites_icons es_astatsnl_icon"></i>AStats.nl</label>
 					</li>
+					<li>
+						<button id="add_custom_link" data-locale-text="custom" class="btn">Custom</button><div id="es_custom_settings" style="display: none;"><input type="checkbox" id="profile_custom" data-setting="profile_custom"> <label data-locale-text="options.name">Name</label>:<input type="text" id="profile_custom_name" data-setting="profile_custom_name" maxlength="30" class="textbox"> URL:<input type="text" id="profile_custom_url" data-setting="profile_custom_url" class="textbox"> <label data-locale-text="options.icon">Icon</label>:<input type="text" id="profile_custom_icon" data-setting="profile_custom_icon" class="textbox"></div>
+					</li>
 				</ul>
 				<li>
 					<label id="show_profile_link_images_text" data-locale-text="options.profile_link_images">Profile link images</label>&nbsp;
@@ -479,9 +482,9 @@
 		<div id="maincontent_credits" class="content" style="display: none">
 			<ul class="credits">
 				<li class="header" id="programming_text" data-locale-text="programming">Programming</li>
-				<li>Jason '<a href="http://steamcommunity.com/profiles/76561198040672342" id="jshackles_steam">jshackles</a>' Shackles</li>
-				<li>Ben '<a href="http://steamcommunity.com/profiles/76561198000198761" id="smashman_steam">smash.mn</a>' Williams</li>
-				<li>Dan '<a href="http://steamcommunity.com/profiles/76561198012785113" id="JoiNNN_steam">JoiNNN</a>' C.</li>
+				<li>Jason Shackles (<a href="http://steamcommunity.com/profiles/76561198040672342" id="jshackles_steam">jshackles</a>)</li>
+				<li>Dan C. (<a href="http://steamcommunity.com/profiles/76561198012785113" id="JoiNNN_steam">JoiNNN</a>)</li>
+				<li>Ben Williams (<a href="http://steamcommunity.com/profiles/76561198000198761" id="smashman_steam">smash.mn</a>)</li>				
 				<li></li>
 				<li><div id="view_all"><a href='https://github.com/jshackles/Enhanced_Steam/graphs/contributors' data-locale-text="view_all">VIEW ALL</a></div></li>
 			</ul>
